force-app/main/default/objects/Application_Fee_Payment__c/Application_Fee_Payment__c.object-meta.xml
<CustomObject>
    <label>Application Fee Payment</label>
    <nameField>
        <displayFormat>AFP-{0000000000}</displayFormat>
        <label>Application Fee Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Fee Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>