force-app/main/default/objects/Application_Fee_Payment__c/fields/Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application Fee</label>
    <referenceTo>Application_Fee__c</referenceTo>
    <relationshipLabel>Application Fee Payment</relationshipLabel>
    <relationshipName>Application_Fee_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>