force-app/main/default/objects/Application_Fee_Payment__c/fields/Pay_To__c.field-meta.xml
<CustomField>
    <fullName>Pay_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay To</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Application Fee Payment</relationshipLabel>
    <relationshipName>Application_Fee_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>