force-app/main/default/objects/Application_Fee_Payment__c/fields/Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Payment_Percentage__c</fullName>
    <label>Payment Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>